--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@types/node": "^16.18.66",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
+    "antd": "^5.12.2",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.2",
-    "react-scripts": "5.0.1",
     "redux": "^5.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,6 +52,7 @@
     "@babel/core": "^7.23.5",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
@@ -63,7 +65,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.69.5",
-    "typescript": "^5.3.2"
+    "typescript": "^4.9.5"
   }
 }
